# APDUPlay

./: .gitignore  .travis.yml  CMakeLists.txt  Instructions.txt  LICENSE  README.md  Winscard.sln  appveyor.yml  copy.bat
.github/workflows/: codeql-analysis.yml
Iniparser/: dictionary.c  dictionary.h  iniparser.c  iniparser.h  iniparser_all.h
Parser/: APDUParse.conf  build.xml
Parser/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
Parser/src/abduparse/: ABDUParse.java
Parser/src/apduparse/: APDUParse.java  APDUSettingsLoader.java
Parser/src/parser/: ABDULogger.java  ABDUNode.java  ABDUParser.java  ABDUSettings.java  ABDUTree.java  ABDUWriter.java  Logger.java  Parser.java
Parser/src/parser/data/: ABDUNode.java  ABDUPacket.java  ABDUTree.java  Node.java  Packet.java  Tree.java
Parser/src/parser/logging/: ILogger.java  Logger.java
Parser/src/parser/output/: Writer.java  (+5 more)
Parser/src/tools/: Pair.java  SimilarityTool.java  StringUtil.java
Shared/: globals.h  status.H  status.cpp
Winscard/: CMakeLists.txt  CommonFnc.cpp  CommonFnc.h  Interface.h  PCSCard.cpp  ReadMe.txt  Resource.h  Winscard.cpp  Winscard.def  Winscard.h  Winscard.rc  Winscard.vcproj  Winscard.vcxproj  Winscard.vcxproj.filters  Winscard32.def  Winscard64.def  license.txt  original.def  original.lib  socket.cpp  socket.h  stdafx.cpp  stdafx.h
Winscard/res/: Winscard.rc2
WinscardTests/: CMakeLists.txt  WinscardTests.vcxproj  WinscardTests.vcxproj.filters  catch.hpp  main.cpp  winscard_rules.txt
enc_temp_folder/925aa27a33b7fc371dedb17a2ba811/: main.cpp
(+15 files in other folders)
